Fix background image not showing up
macOS and Linux care about uppercase and lowercase.
So does most servers, and probably GitHub Pages.

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ text-align: left;
 background-color: #f1f1f1
 }
 .bag{
-background-image: url(img/background.jpg);
+background-image: url("img/Background.jpg");
 background-size: cover;
 background-repeat:no-repeat;
 background-position:center;
